[package]
name = "docker2fl"
version = "0.1.0"
edition = "2021"

[build-dependencies]
git-version = "0.3.5"

[dependencies]
log = "0.4"
anyhow = "1.0.44"
regex = "1.9.6"
rfs = { git="https://github.com/threefoldtech/rfs.git" }
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "macros"] }
bollard = "0.15.0"
futures-util = "0.3"
simple_logger = {version = "1.0.1"}
uuid = { version = "1.3.1", features = ["v4"] }
tempdir = "0.3"
serde_json = "1.0"
clap = { version = "4.2", features = ["derive"] }

[profile.release]
lto = true
