[package]
name = "docker2fl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
git-version = "0.3.5"

[lib]
name = "docker2fl"
path = "src/docker2fl.rs"

[[bin]]
name = "docker2fl"
path = "src/main.rs"

[[bin]]
name = "fl-server"
path = "src/server/main.rs"

[dependencies]
log = "0.4"
anyhow = "1.0.44"
regex = "1.9.6"
rfs = { tag="v2.0.4", git="https://github.com/threefoldtech/rfs.git" }
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "macros"] }
bollard = "0.15.0"
futures-util = "0.3"
simple_logger = {version = "1.0.1"}
uuid = { version = "1.3.1", features = ["v4"] }
tempdir = "0.3"
serde_json = "1.0"
toml = "0.4.2"
clap = { version = "4.2", features = ["derive"] }

serde = { version = "1.0.159" , features = ["derive"] }
axum = "0.7.3"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }

[profile.release]
lto = true
codegen-units = 1
